src/test/resources/parse/InvalidSelf.casc
class InvalidSelf

impl InvalidSelf {
    new(self)
}